# ccg-spider

./: .eslintrc.js  .gitignore  README.md  config.yml  dist_city.py  features.yml  package.json  requirements.txt  run.py  setup.cfg  tailwind.config.js
.github/workflows/: static.yml
frontend/: .gitattributes  .gitignore  README.md  modelling.ipynb  package.json  postcss.config.js  setup.cfg  tailwind.config.css
output/: README.md
prep/: .gitignore  DATA.md  Dockerfile  README.md  config.yml  pyproject.toml  setup.cfg
prep/data/: README.md
prep/processed/: README.md
prep/raw/: README.md
prep/spider/: features.py  main.py  model.py  neighbors.py
spider/: features.py  model.py
