[build-system]
requires = [
    "setuptools>=65",
    "wheel>=0.37.1",
]
build-backend = "setuptools.build_meta"

[project.scripts]
spi = "spider.main:cli"

[project]
name = "spider"
version = "2.0.0"
description = "Geospatial development planning"
readme = "README.md"
requires-python = ">=3.9"
keywords = []

authors = [
    {name = "Chris Arderne", email="chris@rdrn.me"},
]

classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "scipy ~= 1.11",
    "rasterio ~= 1.3",
    "rasterstats >= 0.18",
    "geopandas >= 0.14",
    "typer >= 0.8",
    "PyYAML ~= 6.0",
    "h3pandas >= 0.2.3",
]

[project.optional-dependencies]
dev = [
  "ruff >= 0.3",
  "pyright >= 1.1.331",
]

[project.urls]
homepage = "https://ccgspider.site"
repository = "https://github.com/carderne/ccg-spider"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["spider"]
exclude = ["data*", "notebooks*", "raw*"]

[tool.ruff]
target-version = "py39"
line-length = 88
exclude = []

[tool.ruff.lint]
ignore-init-module-imports = true
select = [
    "F",
    "E",
    "I",
    "U",
    "N",
    "E",
    "T100",
    "A",
    "Q",
    "ANN",
]

[tool.ruff.lint.isort]
known-first-party = ["spider"]

[tool.pyright]
include = ["spider"]
reportMissingImports = true
reportMissingParameterType = true
reportUnnecessaryTypeIgnoreComment = true
reportDeprecated = true
pythonVersion = "3.10"
