[metadata]
name = spider
version = 1.0.0

[options]
packages = spider
install_requires =
    scipy>=1.8.0
    rasterio>=1.0.7
    rasterstats>=0.13.0
    geopandas>=0.10.2
    typer>=0.0.12
    PyYAML>=5.1
    h3pandas>=0.2.3
    pygeos>=0.12.0

[options.entry_points]
console_scripts =
    spi = spider.main:cli

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:isort]
profile=black
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
